--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Zkeal <zkeal@outlook.com>"]
 [tool.poetry.dependencies]
 python = "^3.7"
 numpy = "^1.19.3"
+matplotlib = "^3.3.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
