--- a/assignment-1/pyproject.toml
+++ b/assignment-1/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Zkeal <zkeal@outlook.com>"]
 python = "^3.7"
 numpy = "^1.19.3"
 matplotlib = "^3.3.2"
+seaborn = "^0.11.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
